src/syn/snapshots/tvm__syn__tests__literals.snap
---
source: src/syn/tests.rs
expression: "parse!(r#\"\n        let v: int = 1;\n        let v: num = 1.0;\n        let v: bool = true;\n        let v: str = \"yo\";\n    \"#)"
---
Ast {
    decls: [],
    top_level: Block {
        body: [
            Let {
                name: Ident("v"),
                ty: Some(
                    Named(
                        Named {
                            name: Ident("int"),
                        },
                    ),
                ),
                init: Int(
                    1,
                ),
            },
            Let {
                name: Ident("v"),
                ty: Some(
                    Named(
                        Named {
                            name: Ident("num"),
                        },
                    ),
                ),
                init: Num(
                    1.0,
                ),
            },
            Let {
                name: Ident("v"),
                ty: Some(
                    Named(
                        Named {
                            name: Ident("bool"),
                        },
                    ),
                ),
                init: Bool(
                    true,
                ),
            },
            Let {
                name: Ident("v"),
                ty: Some(
                    Named(
                        Named {
                            name: Ident("str"),
                        },
                    ),
                ),
                init: Str(
                    "yo",
                ),
            },
        ],
        tail: None,
    },
}
