src/syn/snapshots/tvm__syn__tests__no_nested_fn.snap
---
source: src/syn/tests.rs
expression: "parse!(r#\"\n    fn test() {\n      fn inner() {}\n    }\n  \"#)"
---
error: functions may not be nested
2 |    fn inner() {}
  |    ^^

