src/syn/snapshots/tvm__syn__tests__opt_type.snap
---
source: src/syn/tests.rs
expression: "parse!(r#\"\n    let opt: int? = 1;\n  \"#)"
---
SyntaxTree {
    top_level: Block {
        body: [
            Let(
                Ident("opt"),
                Some(
                    Opt(
                        Named(
                            Ident("int"),
                        ),
                    ),
                ),
                Literal(
                    Int(1),
                ),
            ),
        ],
        tail: None,
    },
}
