src/syn/snapshots/tvm__syn__tests__postfix.snap
---
source: src/syn/tests.rs
expression: "parse!(r#\"\n    v.a[a](a);\n    v(a)[a].a;\n    v.a();\n  \"#)"
---
Ast {
    decls: [],
    top_level: Block {
        body: [
            Call {
                callee: UseIndex {
                    parent: UseField {
                        parent: UseVar {
                            name: Ident("v"),
                        },
                        name: Ident("a"),
                    },
                    key: UseVar {
                        name: Ident("a"),
                    },
                },
                args: [
                    Arg(
                        UseVar {
                            name: Ident("a"),
                        },
                    ),
                ],
            },
            UseField {
                parent: UseIndex {
                    parent: Call {
                        callee: UseVar {
                            name: Ident("v"),
                        },
                        args: [
                            Arg(
                                UseVar {
                                    name: Ident("a"),
                                },
                            ),
                        ],
                    },
                    key: UseVar {
                        name: Ident("a"),
                    },
                },
                name: Ident("a"),
            },
            MethodCall {
                receiver: UseVar {
                    name: Ident("v"),
                },
                method: Ident("a"),
                args: [],
            },
        ],
        tail: None,
    },
}
