src/syn/snapshots/tvm__syn__tests__variables.snap
---
source: src/syn/tests.rs
expression: "parse!(r#\"\n    let v = 0;\n    let v: int = 0;\n  \"#)"
---
SyntaxTree {
    top_level: Block {
        body: [
            Let(
                Ident("v"),
                None,
                Literal(
                    Int(0),
                ),
            ),
            Let(
                Ident("v"),
                Some(
                    Named(
                        Ident("int"),
                    ),
                ),
                Literal(
                    Int(0),
                ),
            ),
        ],
        tail: None,
    },
}
